--- a/.env.example
+++ b/.env.example
@@ -6,12 +6,15 @@ APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 
+LANGUAGE=pt-BR
+TIMEZONE=America/Maceio
+
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=dentistaweb
+DB_USERNAME=admin
+DB_PASSWORD=admin
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
